product page alignment corrected

--- a/templates/user/user_checkout.html
+++ b/templates/user/user_checkout.html
@@ -19,6 +19,10 @@
                 <div class="card mb-4">
                     <div class="card-header py-3">
                         <h5 class="mb-0">Biling details</h5>
+                        <button type="button"
+                                                class="btn btn-primary btn mt-2"
+                                                data-toggle="modal"
+                                                data-target="#exampleModalCenter">Add Address</button>
                     </div>
                     <div class="card-body">
                         <label for="address">Select Address</label>
